# Thinkfast

./: .gitattributes  .gitignore  LIBRARY_Windows.txt  README.md  START_HERE_Windows.txt  index_library_windows.bat  pyproject.toml  run_windows.bat
.github/workflows/: ci.yml
agent/: cli.py  engine.py  finetune.py  index_cli.py  library.py  loop.py  memory.py  ollama_engine.py  webui.py
agent/tools/: __init__.py  calculator.py  files.py  library.py  shell.py
examples/: finetune_data.jsonl
tests/: test_engine_helpers.py  test_imports.py  test_library.py  test_loop.py  test_memory.py  test_ollama_engine.py  test_tools.py
