[project]
name = "agentic-ai"
version = "0.1.0"
description = "Minimal, extensible local agent loop: in-process open-weights LLM + tool calling + memory."
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.45",
    "torch>=2.1",
    "accelerate>=0.26",
]

[project.optional-dependencies]
test = ["pytest>=7"]
finetune = ["peft>=0.11", "datasets>=2.0"]

[project.scripts]
agent = "agent.cli:main"
agent-finetune = "agent.finetune:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]
