[project]
name = "agentic-ai"
version = "0.1.0"
description = "Minimal, extensible local agent loop: pick an LLM backend + tool calling + memory."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# In-process model with Hugging Face Transformers (heavier; runs on your hardware).
local = ["transformers>=4.45", "torch>=2.1", "accelerate>=0.26"]
# Ollama backend - talks to a local Ollama server over HTTP (install Ollama separately).
ollama = []
# Browser chat UI.
webui = ["gradio>=4"]
# LoRA fine-tuning of the in-process model.
finetune = ["transformers>=4.45", "torch>=2.1", "accelerate>=0.26", "peft>=0.11", "datasets>=2.0"]
test = ["pytest>=7"]

[project.scripts]
agent = "agent.cli:main"
agent-finetune = "agent.finetune:main"
agent-web = "agent.webui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent*"]
